--- a/WK3/javascript-fundamentals-part1/index.html
+++ b/WK3/javascript-fundamentals-part1/index.html
@@ -2,19 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JavaScript Fundamentals</title>
+    <title>JavaScript Fundamentals part 1</title>
   </head>
   <body>
     <h3>Part 1</h3>
     <ul>
       <li><a href="part1/assignment.html">Assignment</a></li>
       <li><a href="part1/bonus.html">Bonus</a></li>
-    </ul>
-
-    <h3>Part 2</h3>
-    <ul>
-      <li><a href="part2/assignment.html">Assignment</a></li>
-      <li><a href="part2/bonus.html">Bonus</a></li>
     </ul>
   </body>
 </html>
